# omnibump

./: .gitignore  .golangci.yaml  .goreleaser.yaml  CODEOWNERS  Makefile  README.md  TRANSITIVE_DETECTION_SUMMARY.md  go.mod  go.sum  main.go
.chainguard/: source.yaml
.github/: dependabot.yml
.github/workflows/: actionlint.yaml  build.yaml  codeql.yaml  go-tests.yaml  release.yaml  verify.yaml
cmd/omnibump/: analyze.go  analyze_remote.go  analyze_remote_test.go  root.go  root_test.go  supported.go
docs/: advanced-usage.md  best-practices.md  cli-reference.md  configuration.md  installation.md  migration-guide.md  transitive-dependency-detection.md  transitive-detection-process.md  troubleshooting.md  usage-examples.md  validation-and-safety.md  workflows.md
pkg/analyzer/: interface.go
pkg/config/: config.go  config_test.go
pkg/gradlefile/: build.go  build_test.go  catalog.go  catalog_test.go  doc.go  example_test.go  force.go  force_test.go  gradlefile.go  managed.go  managed_configs_test.go  managed_test.go  patterns.go  properties.go  properties_test.go  script.go  settings.go  settings_test.go  shipconfig.go  shipconfig_test.go
pkg/languages/: interface.go  registry.go  registry_test.go
pkg/languages/golang/: golang.go  (+15 more)
pkg/languages/python/testdata/flit-pyproject/: pyproject.toml
pkg/languages/python/testdata/pdm-pyproject/: pyproject.toml
pkg/languages/python/testdata/uv-project/: pyproject.toml
pkg/pathutil/: path.go  path_test.go
pkg/remote/: README.md  github.go  github_integration_test.go  github_test.go  interface.go  validation_test.go
(+180 files in other folders)
