[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flit-example"
version = "0.2.1"
description = "Example flit project for testing"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "colorama>=0.4.4",
    "pydantic>=1.9.0",
    "requests>=2.28.0",
]
