[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uv-project"
version = "0.1.0"
description = "Example project managed by uv"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "cryptography>=42.0.0",
]
